Cleaning up description of how to create bootcamp home page, and bringing files into sync with revised description.

--- a/lessons/db.html
+++ b/lessons/db.html
@@ -1,6 +1,6 @@
 ---
 layout: lesson
-shared: ..
+root: ..
 title: Databases and SQL
 order: ["select", "distinct", "filter", "calc", "sort", "null", "aggregate", "grouping", "join", "create", "transactions", "programming"]
 ---
