--- a/lessons/shell.html
+++ b/lessons/shell.html
@@ -1,6 +1,6 @@
 ---
 layout: lesson
-shared: ..
+root: ..
 title: The Unix Shell
 order: ["filedir", "create", "pipefilter", "loop", "scripts", "find"]
 ---
