--- a/lessons/web.html
+++ b/lessons/web.html
@@ -1,6 +1,6 @@
 ---
 layout: lesson
-shared: ..
+root: ..
 title: Web Programming with Python
 order: ["history", "formatting", "attributes", "morehtml", "templating", "http", "client", "server", "index", "syndicate"]
 ---
