Importing Git lessons - but getting a weird build error (and  is rendered as an en-dash)

--- a/lessons/index.html
+++ b/lessons/index.html
@@ -10,6 +10,21 @@ title: Lesson Material
   to include all of the lesson material for viewing and checking.
 </p>
 
+<dl>
+
+  <dt>Version Control With Git</dt>
+  <dd>
+    This introduction is based on materials by
+    Katy Huff, Anthony Scopatz, Joshua R. Smith, and Sri Hari Krishna Narayanan.
+    It includes:
+    <ul>
+      <li><a href="git/instructors.html">Instructors' Guide</a></li>
+      <li><a href="git/local.html">Local Operations</a></li>
+      <li><a href="git/remote.html">Using Remote Repositories</a></li>
+    </ul>
+    These materials have not yet been broken down into includable chunks.
+  </dd>
+
   <dt><a href="guide-shell.html">Instructor's Guide for the Unix Shell</a></dt>
   <dd>
     Core material for the Unix shell:
