Explaining invasion percolation in lesson index

--- a/lessons/index.html
+++ b/lessons/index.html
@@ -46,6 +46,15 @@ title: Lesson Material
     To do: diagrams.
   </dd>
 
+  <dt><a href="guide-invperc.html">Instructor's Guide for Invasion Percolation Example</a></dt>
+  <dd>
+    Invasion percolation is a good half-day example
+    that brings together many of the things we teach about programming
+    while introducing new concepts like performance profiling and development lifecycles.
+    <br/>
+    To do: diagrams; challenges; IPython Notebooks.
+  </dd>
+
   <dt><a href="guide-db.html">Instructor's Guide for Databases and SQL</a></dt>
   <dd>
     Core material for SQL databases:
@@ -65,7 +74,7 @@ title: Lesson Material
     To do: diagrams, and material on how to design and structure tables.
   </dd>
 
-  <dt><a href="guide-db.html">Instructor's Guide for Web Programming with Python</a></dt>
+  <dt><a href="guide-web.html">Instructor's Guide for Web Programming with Python</a></dt>
   <dd>
     Preliminary material on web programming:
     a little bit of history,
