Trying to fix formatting errors

--- a/lessons/guide-db.html
+++ b/lessons/guide-db.html
@@ -5,12 +5,12 @@ title: Instructor's Guide for Databases and SQL
 order: ["select", "distinct", "filter", "calc", "sort", "null", "aggregate", "grouping", "join", "create", "transactions", "programming"]
 ---
 
-<section id="s:db:opening">
+<section>
   <h2>Opening</h2>
   {% include guide-db/opening.html %}
 </section>
 
-<section id="s:db:instructors">
+<section>
   <h2>Instructors</h2>
   {% include guide-db/instructors.html %}
 </section>
@@ -159,7 +159,7 @@ order: ["select", "distinct", "filter", "calc", "sort", "null", "aggregate", "gr
   {% include guide-db/programming/challenges.html %}
 </section>
 
-<section id="s:db:summary">
+<section>
   <h2>Summary</h2>
   {% include guide-db/summary.html %}
 </section>
