--- a/lessons/guide-invperc.html
+++ b/lessons/guide-invperc.html
@@ -5,12 +5,12 @@ title: Instructor's Guide for Invasion Percolation Example
 order: ["grid", "alias", "random", "neighbors", "ties", "assembly", "bugs", "refactor", "test", "perf", "profile", "lazy", "lifecycle"]
 ---
 
-<section id="s:invperc:opening">
+<section>
   <h2>Opening</h2>
   {% include guide-invperc/opening.html %}
 </section>
 
-<section id="s:invperc:instructors">
+<section>
   <h2>Instructors</h2>
   {% include guide-invperc/instructors.html %}
 </section>
@@ -171,7 +171,7 @@ order: ["grid", "alias", "random", "neighbors", "ties", "assembly", "bugs", "ref
   {% include guide-invperc/lifecycle/challenges.html %}
 </section>
 
-<section id="s:invperc:summary">
+<section>
   <h2>Summary</h2>
   {% include guide-invperc/summary.html %}
 </section>
