--- a/lessons/guide-shell.html
+++ b/lessons/guide-shell.html
@@ -4,12 +4,12 @@ root: ..
 title: Instructor's Guide for the Unix Shell
 order: ["filedir", "create", "pipefilter", "loop", "scripts", "find"]
 ---
-<section id="s:shell:opening">
+<section>
   <h2>Opening</h2>
   {% include guide-shell/opening.html %}
 </section>
 
-<section id="s:shell:instructors">
+<section>
   <h2>Instructors</h2>
   {% include guide-shell/instructors.html %}
 </section>
@@ -86,7 +86,7 @@ order: ["filedir", "create", "pipefilter", "loop", "scripts", "find"]
   {% include guide-shell/find/challenges.html %}
 </section>
 
-<section id="s:db:summary">
+<section>
   <h2>Summary</h2>
   {% include guide-shell/summary.html %}
 </section>
