--- a/lessons/guide-web.html
+++ b/lessons/guide-web.html
@@ -5,12 +5,12 @@ title: Instructor's Guide for Web Programming with Python
 order: ["history", "formatting", "attributes", "morehtml", "templating", "http", "client", "server", "index", "syndicate"]
 ---
 
-<section id="s:web:opening">
+<section>
   <h2>Opening</h2>
   {% include guide-web/opening.html %}
 </section>
 
-<section id="s:web:instructors">
+<section>
   <h2>Instructors</h2>
   {% include guide-web/instructors.html %}
 </section>
@@ -135,7 +135,7 @@ order: ["history", "formatting", "attributes", "morehtml", "templating", "http",
   {% include guide-web/syndicate/challenges.html %}
 </section>
 
-<section id="s:web:summary">
+<section>
   <h2>Summary</h2>
   {% include guide-web/summary.html %}
 </section>
