Importing sets and dictionaries material

--- a/lessons/index.html
+++ b/lessons/index.html
@@ -55,6 +55,18 @@ title: Lesson Material
     To do: diagrams; challenges; IPython Notebooks.
   </dd>
 
+  <dt><a href="guide-setdict.html">Instructor's Guide for Sets and Dictionaries</a></dt>
+  <dd>
+    Optional material for Python programming:
+    sets and dictionaries,
+    how hash-based data structures work,
+    the JSON data format
+    (which relies heavily on dictionaries),
+    and three examples of increasing complexity.
+    <br/>
+    To do: diagrams.
+  </dd>
+
   <dt><a href="guide-db.html">Instructor's Guide for Databases and SQL</a></dt>
   <dd>
     Core material for SQL databases:
