1. Importing Python debugging tutorial from Anthony and Patrick (via the 'restructured' branch in the old repo). 2. Getting build errors in lessons/python-debugging/tutorial.md, but can't diagnose (no line numbers in error messages when run in Jekyll, and Maruku seems to stumble on Pygments highlighting).

--- a/lessons/index.html
+++ b/lessons/index.html
@@ -36,6 +36,14 @@ title: Lesson Material
     These materials have not yet been broken down into includable chunks.
   </dd>
 
+  <dt>Python Debugging</dt>
+  <dd>
+    This introduction is based on materials by
+    Anthony Scopatz and Patrick Fuller.
+    It includes a <a href="python-debugging/tutorial.html">single tutorial</a>.
+    This materials have not yet been broken down into includable chunks.
+  </dd>
+
   <dt><a href="guide-shell.html">Instructor's Guide for the Unix Shell</a></dt>
   <dd>
     Core material for the Unix shell:
