Starting to import IPythonBlocks-based intro to Python, and cleaning up random HTML in other places

--- a/lessons/guide-db/tutorial.html
+++ b/lessons/guide-db/tutorial.html
@@ -1,6 +1,6 @@
 ---
 layout: lesson
-root: ..
+root: ../..
 title: Instructor's Guide for Databases and SQL
 order: ["select", "distinct", "filter", "calc", "sort", "null", "aggregate", "grouping", "join", "create", "transactions", "programming"]
 ---
