--- a/lessons/guide-invperc/tutorial.html
+++ b/lessons/guide-invperc/tutorial.html
@@ -1,6 +1,6 @@
 ---
 layout: lesson
-root: ..
+root: ../..
 title: Instructor's Guide for Invasion Percolation Example
 order: ["grid", "alias", "random", "neighbors", "ties", "assembly", "bugs", "refactor", "test", "perf", "profile", "lazy", "lifecycle"]
 ---
