--- a/lessons/guide-setdict/tutorial.html
+++ b/lessons/guide-setdict/tutorial.html
@@ -1,6 +1,6 @@
 ---
 layout: lesson
-root: ..
+root: ../..
 title: Instructor's Guide for Sets and Dictionaries
 order: ["sets", "storage", "dict", "aggregate", "nanotech", "json", "phylotree"]
 ---
