--- a/lessons/guide-shell/tutorial.html
+++ b/lessons/guide-shell/tutorial.html
@@ -1,6 +1,6 @@
 ---
 layout: lesson
-root: ..
+root: ../..
 title: Instructor's Guide for the Unix Shell
 order: ["filedir", "create", "pipefilter", "loop", "scripts", "find"]
 ---
