--- a/lessons/index.html
+++ b/lessons/index.html
@@ -88,7 +88,7 @@ title: Lesson Material
 
   <dl>
 
-    <dt><a href="guide-shell.html">Instructor's Guide for the Unix Shell</a></dt>
+    <dt><a href="guide-shell/tutorial.html">Instructor's Guide for the Unix Shell</a></dt>
     <dd>
       Core material for the Unix shell:
       the organization of files and directories,
@@ -101,16 +101,14 @@ title: Lesson Material
       To do: diagrams.
     </dd>
 
-    <dt><a href="guide-invperc.html">Instructor's Guide for Invasion Percolation Example</a></dt>
+    <dt><a href="guide-python-blocks/tutorial.html">Instructor's Guide for Basic Python Using IPythonBlocks</a></dt>
     <dd>
-      Invasion percolation is a good half-day example
-      that brings together many of the things we teach about programming
-      while introducing new concepts like performance profiling and development lifecycles.
+      An introduction to basic programming concepts using the IPython Notebook and IPythonBlocks.
       <br/>
-      To do: diagrams; challenges; IPython Notebooks.
+      To do: lots.
     </dd>
 
-    <dt><a href="guide-setdict.html">Instructor's Guide for Sets and Dictionaries</a></dt>
+    <dt><a href="guide-setdict/tutorial.html">Instructor's Guide for Sets and Dictionaries</a></dt>
     <dd>
       Optional material for Python programming:
       sets and dictionaries,
@@ -122,7 +120,16 @@ title: Lesson Material
       To do: diagrams.
     </dd>
 
-    <dt><a href="guide-db.html">Instructor's Guide for Databases and SQL</a></dt>
+    <dt><a href="guide-invperc/tutorial.html">Instructor's Guide for Invasion Percolation Example</a></dt>
+    <dd>
+      Invasion percolation is a good half-day example
+      that brings together many of the things we teach about programming
+      while introducing new concepts like performance profiling and development lifecycles.
+      <br/>
+      To do: diagrams; challenges; IPython Notebooks.
+    </dd>
+
+    <dt><a href="guide-db/tutorial.html">Instructor's Guide for Databases and SQL</a></dt>
     <dd>
       Core material for SQL databases:
       selection,
@@ -141,7 +148,7 @@ title: Lesson Material
       To do: diagrams, and material on how to design and structure tables.
     </dd>
 
-    <dt><a href="guide-web.html">Instructor's Guide for Web Programming with Python</a></dt>
+    <dt><a href="guide-web/tutorial.html">Instructor's Guide for Web Programming with Python</a></dt>
     <dd>
       Preliminary material on web programming:
       a little bit of history,
