--- a/lessons/guide-web/tutorial.html
+++ b/lessons/guide-web/tutorial.html
@@ -1,6 +1,6 @@
 ---
 layout: lesson
-root: ..
+root: ../..
 title: Instructor's Guide for Web Programming with Python
 order: ["history", "formatting", "attributes", "morehtml", "templating", "http", "client", "server", "index", "syndicate"]
 ---
