Renaming for consistency

--- a/lessons/index.html
+++ b/lessons/index.html
@@ -101,7 +101,7 @@ title: Lesson Material
       To do: diagrams.
     </dd>
 
-    <dt><a href="guide-python-blocks/tutorial.html">Instructor's Guide for Basic Python Using IPythonBlocks</a></dt>
+    <dt><a href="guide-pyblocks/tutorial.html">Instructor's Guide for Basic Python Using IPythonBlocks</a></dt>
     <dd>
       An introduction to basic programming concepts using the IPython Notebook and IPythonBlocks.
       <br/>
