For loops using IPython Blocks

--- a/lessons/guide-pyblocks/tutorial.html
+++ b/lessons/guide-pyblocks/tutorial.html
@@ -44,3 +44,15 @@ order: ["basic", "types", "lib"]
   <h3>Challenges</h3>
   {% include guide-pyblocks/lib/challenges.html %}
 </section>
+
+<section id="s:pyblocks:lib">
+  <h2>{% include guide-pyblocks/forloop/title.md %}</h2>
+  <h3>Objectives</h3>
+  {% include guide-pyblocks/forloop/objectives.html %}
+  <h3>Lesson</h3>
+  {% include guide-pyblocks/forloop/lesson.html %}
+  <h3>Summary</h3>
+  {% include guide-pyblocks/forloop/keypoints.html %}
+  <h3>Challenges</h3>
+  {% include guide-pyblocks/forloop/challenges.html %}
+</section>
