Coverting another section of the blocks-based intro

--- a/lessons/guide-pyblocks/tutorial.html
+++ b/lessons/guide-pyblocks/tutorial.html
@@ -45,7 +45,7 @@ order: ["basic", "types", "lib"]
   {% include guide-pyblocks/lib/challenges.html %}
 </section>
 
-<section id="s:pyblocks:lib">
+<section id="s:pyblocks:forloop">
   <h2>{% include guide-pyblocks/forloop/title.md %}</h2>
   <h3>Objectives</h3>
   {% include guide-pyblocks/forloop/objectives.html %}
@@ -55,4 +55,16 @@ order: ["basic", "types", "lib"]
   {% include guide-pyblocks/forloop/keypoints.html %}
   <h3>Challenges</h3>
   {% include guide-pyblocks/forloop/challenges.html %}
+</section>
+
+<section id="s:pyblocks:index">
+  <h2>{% include guide-pyblocks/index/title.md %}</h2>
+  <h3>Objectives</h3>
+  {% include guide-pyblocks/index/objectives.html %}
+  <h3>Lesson</h3>
+  {% include guide-pyblocks/index/lesson.html %}
+  <h3>Summary</h3>
+  {% include guide-pyblocks/index/keypoints.html %}
+  <h3>Challenges</h3>
+  {% include guide-pyblocks/index/challenges.html %}
 </section>
