--- a/lessons/guide-pyblocks/tutorial.html
+++ b/lessons/guide-pyblocks/tutorial.html
@@ -68,3 +68,15 @@ order: ["basic", "types", "lib"]
   <h3>Challenges</h3>
   {% include guide-pyblocks/index/challenges.html %}
 </section>
+
+<section id="s:pyblocks:logic">
+  <h2>{% include guide-pyblocks/logic/title.md %}</h2>
+  <h3>Objectives</h3>
+  {% include guide-pyblocks/logic/objectives.html %}
+  <h3>Lesson</h3>
+  {% include guide-pyblocks/logic/lesson.html %}
+  <h3>Summary</h3>
+  {% include guide-pyblocks/logic/keypoints.html %}
+  <h3>Challenges</h3>
+  {% include guide-pyblocks/logic/challenges.html %}
+</section>
