--- a/lessons/guide-setdict/tutorial.html
+++ b/lessons/guide-setdict/tutorial.html
@@ -4,18 +4,33 @@ root: ../..
 title: Instructor's Guide for Sets and Dictionaries
 order: ["sets", "storage", "dict", "aggregate", "nanotech", "json", "phylotree"]
 ---
-<section>
+<div class="well">
+  <ul>
+    <li><a href="#s:setdict:opening">Opening</a></li>
+    <li><a href="#s:setdict:instructors">For Instructors</a></li>
+    <li><a href="#s:setdict:sets">{% include guide-setdict/sets/title.md %}</a></li>
+    <li><a href="#s:setdict:storage">{% include guide-setdict/storage/title.md %}</a></li>
+    <li><a href="#s:setdict:dict">{% include guide-setdict/dict/title.md %}</a></li>
+    <li><a href="#s:setdict:aggregate">{% include guide-setdict/aggregate/title.md %}</a></li>
+    <li><a href="#s:setdict:nanotech">{% include guide-setdict/nanotech/title.md %}</a></li>
+    <li><a href="#s:setdict:json">{% include guide-setdict/json/title.md %}</a></li>
+    <li><a href="#s:setdict:summary">Summary</a></li>
+  </ul>
+</div>
+
+<section id="s:setdict:opening">
   <h2>Opening</h2>
   {% include guide-setdict/opening.html %}
 </section>
 
-<section>
-  <h2>Instructors</h2>
+<section id="s:setdict:instructors">
+  <h2>For Instructors</h2>
   {% include guide-setdict/instructors.html %}
 </section>
 
 <section id="s:setdict:sets">
   <h2>{% include guide-setdict/sets/title.md %}</h2>
+  <p><a href="setdict-sets.ipynb">IPython Notebook</a></p>
   <h3>Objectives</h3>
   {% include guide-setdict/sets/objectives.html %}
   <h3>Lesson</h3>
@@ -28,6 +43,7 @@ order: ["sets", "storage", "dict", "aggregate", "nanotech", "json", "phylotree"]
 
 <section id="s:setdict:storage">
   <h2>{% include guide-setdict/storage/title.md %}</h2>
+  <p><a href="setdict-storage.ipynb">IPython Notebook</a></p>
   <h3>Objectives</h3>
   {% include guide-setdict/storage/objectives.html %}
   <h3>Lesson</h3>
@@ -40,6 +56,7 @@ order: ["sets", "storage", "dict", "aggregate", "nanotech", "json", "phylotree"]
 
 <section id="s:setdict:dict">
   <h2>{% include guide-setdict/dict/title.md %}</h2>
+  <p><a href="setdict-setdict.ipynb">IPython Notebook</a></p>
   <h3>Objectives</h3>
   {% include guide-setdict/dict/objectives.html %}
   <h3>Lesson</h3>
@@ -52,6 +69,7 @@ order: ["sets", "storage", "dict", "aggregate", "nanotech", "json", "phylotree"]
 
 <section id="s:setdict:aggregate">
   <h2>{% include guide-setdict/aggregate/title.md %}</h2>
+  <p><a href="setdict-aggregate.ipynb">IPython Notebook</a></p>
   <h3>Objectives</h3>
   {% include guide-setdict/aggregate/objectives.html %}
   <h3>Lesson</h3>
@@ -64,6 +82,7 @@ order: ["sets", "storage", "dict", "aggregate", "nanotech", "json", "phylotree"]
 
 <section id="s:setdict:nanotech">
   <h2>{% include guide-setdict/nanotech/title.md %}</h2>
+  <p><a href="setdict-nanotech.ipynb">IPython Notebook</a></p>
   <h3>Objectives</h3>
   {% include guide-setdict/nanotech/objectives.html %}
   <h3>Lesson</h3>
@@ -76,6 +95,7 @@ order: ["sets", "storage", "dict", "aggregate", "nanotech", "json", "phylotree"]
 
 <section id="s:setdict:json">
   <h2>{% include guide-setdict/json/title.md %}</h2>
+  <p><a href="setdict-json.ipynb">IPython Notebook</a></p>
   <h3>Objectives</h3>
   {% include guide-setdict/json/objectives.html %}
   <h3>Lesson</h3>
@@ -86,6 +106,7 @@ order: ["sets", "storage", "dict", "aggregate", "nanotech", "json", "phylotree"]
   {% include guide-setdict/json/challenges.html %}
 </section>
 
+<!-- FIXME: rework this example
 <section id="s:setdict:phylotree">
   <h2>{% include guide-setdict/phylotree/title.md %}</h2>
   <h3>Objectives</h3>
@@ -97,8 +118,9 @@ order: ["sets", "storage", "dict", "aggregate", "nanotech", "json", "phylotree"]
   <h3>Challenges</h3>
   {% include guide-setdict/phylotree/challenges.html %}
 </section>
+-->
 
-<section>
+<section id="s:setdict:summary">
   <h2>Summary</h2>
   {% include guide-setdict/summary.html %}
 </section>
