--- a/lessons/guide-setdict/tutorial.html
+++ b/lessons/guide-setdict/tutorial.html
@@ -4,33 +4,19 @@ root: ../..
 title: Instructor's Guide for Sets and Dictionaries
 order: ["sets", "storage", "dict", "aggregate", "nanotech", "json", "phylotree"]
 ---
-<div class="well">
-  <ul>
-    <li><a href="#s:setdict:opening">Opening</a></li>
-    <li><a href="#s:setdict:instructors">For Instructors</a></li>
-    <li><a href="#s:setdict:sets">{% include guide-setdict/sets/title.md %}</a></li>
-    <li><a href="#s:setdict:storage">{% include guide-setdict/storage/title.md %}</a></li>
-    <li><a href="#s:setdict:dict">{% include guide-setdict/dict/title.md %}</a></li>
-    <li><a href="#s:setdict:aggregate">{% include guide-setdict/aggregate/title.md %}</a></li>
-    <li><a href="#s:setdict:nanotech">{% include guide-setdict/nanotech/title.md %}</a></li>
-    <li><a href="#s:setdict:json">{% include guide-setdict/json/title.md %}</a></li>
-    <li><a href="#s:setdict:summary">Summary</a></li>
-  </ul>
-</div>
-
-<section id="s:setdict:opening">
+<section>
   <h2>Opening</h2>
   {% include guide-setdict/opening.html %}
 </section>
 
-<section id="s:setdict:instructors">
-  <h2>For Instructors</h2>
+<section>
+  <h2>Instructors</h2>
   {% include guide-setdict/instructors.html %}
 </section>
 
 <section id="s:setdict:sets">
   <h2>{% include guide-setdict/sets/title.md %}</h2>
-  <p><a href="setdict-sets.ipynb">IPython Notebook</a></p>
+  <p><a href="setdict-sets.ipynb">Notebook</a></p>
   <h3>Objectives</h3>
   {% include guide-setdict/sets/objectives.html %}
   <h3>Lesson</h3>
@@ -43,7 +29,7 @@ order: ["sets", "storage", "dict", "aggregate", "nanotech", "json", "phylotree"]
 
 <section id="s:setdict:storage">
   <h2>{% include guide-setdict/storage/title.md %}</h2>
-  <p><a href="setdict-storage.ipynb">IPython Notebook</a></p>
+  <p><a href="setdict-storage.ipynb">Notebook</a></p>
   <h3>Objectives</h3>
   {% include guide-setdict/storage/objectives.html %}
   <h3>Lesson</h3>
@@ -56,7 +42,7 @@ order: ["sets", "storage", "dict", "aggregate", "nanotech", "json", "phylotree"]
 
 <section id="s:setdict:dict">
   <h2>{% include guide-setdict/dict/title.md %}</h2>
-  <p><a href="setdict-setdict.ipynb">IPython Notebook</a></p>
+  <p><a href="setdict-dict.ipynb">Notebook</a></p>
   <h3>Objectives</h3>
   {% include guide-setdict/dict/objectives.html %}
   <h3>Lesson</h3>
@@ -68,8 +54,8 @@ order: ["sets", "storage", "dict", "aggregate", "nanotech", "json", "phylotree"]
 </section>
 
 <section id="s:setdict:aggregate">
+  <p><a href="setdict-aggregate.ipynb">Notebook</a></p>
   <h2>{% include guide-setdict/aggregate/title.md %}</h2>
-  <p><a href="setdict-aggregate.ipynb">IPython Notebook</a></p>
   <h3>Objectives</h3>
   {% include guide-setdict/aggregate/objectives.html %}
   <h3>Lesson</h3>
@@ -82,7 +68,7 @@ order: ["sets", "storage", "dict", "aggregate", "nanotech", "json", "phylotree"]
 
 <section id="s:setdict:nanotech">
   <h2>{% include guide-setdict/nanotech/title.md %}</h2>
-  <p><a href="setdict-nanotech.ipynb">IPython Notebook</a></p>
+  <p><a href="setdict-nanotech.ipynb">Notebook</a></p>
   <h3>Objectives</h3>
   {% include guide-setdict/nanotech/objectives.html %}
   <h3>Lesson</h3>
@@ -95,7 +81,7 @@ order: ["sets", "storage", "dict", "aggregate", "nanotech", "json", "phylotree"]
 
 <section id="s:setdict:json">
   <h2>{% include guide-setdict/json/title.md %}</h2>
-  <p><a href="setdict-json.ipynb">IPython Notebook</a></p>
+  <p><a href="setdict-json.ipynb">Notebook</a></p>
   <h3>Objectives</h3>
   {% include guide-setdict/json/objectives.html %}
   <h3>Lesson</h3>
@@ -106,7 +92,6 @@ order: ["sets", "storage", "dict", "aggregate", "nanotech", "json", "phylotree"]
   {% include guide-setdict/json/challenges.html %}
 </section>
 
-<!-- FIXME: rework this example
 <section id="s:setdict:phylotree">
   <h2>{% include guide-setdict/phylotree/title.md %}</h2>
   <h3>Objectives</h3>
@@ -118,9 +103,8 @@ order: ["sets", "storage", "dict", "aggregate", "nanotech", "json", "phylotree"]
   <h3>Challenges</h3>
   {% include guide-setdict/phylotree/challenges.html %}
 </section>
--->
 
-<section id="s:setdict:summary">
+<section>
   <h2>Summary</h2>
   {% include guide-setdict/summary.html %}
 </section>
