Putting entire lesson in notebook form

--- a/lessons/guide-setdict/tutorial.html
+++ b/lessons/guide-setdict/tutorial.html
@@ -12,6 +12,8 @@ order: ["sets", "storage", "dict", "aggregate", "nanotech", "json", "phylotree"]
 <section>
   <h2>Instructors</h2>
   {% include guide-setdict/instructors.html %}
+  <h2>Prerequisites</h2>
+  {% include guide-setdict/prereq.html %}
 </section>
 
 <section id="s:setdict:sets">
