Bringing in new Python material and making old labeling consistent

--- a/lessons/guide-invperc/tutorial.html
+++ b/lessons/guide-invperc/tutorial.html
@@ -1,7 +1,7 @@
 ---
 layout: lesson
 root: ../..
-title: Instructor's Guide for Invasion Percolation Example
+title: Invasion Percolation
 order: ["grid", "alias", "random", "neighbors", "ties", "assembly", "bugs", "refactor", "test", "perf", "profile", "lazy", "lifecycle"]
 ---
 
