--- a/lessons/guide-setdict/tutorial.html
+++ b/lessons/guide-setdict/tutorial.html
@@ -1,7 +1,7 @@
 ---
 layout: lesson
 root: ../..
-title: Instructor's Guide for Sets and Dictionaries
+title: Sets and Dictionaries
 order: ["sets", "storage", "dict", "aggregate", "nanotech", "json", "phylotree"]
 ---
 <section>
