--- a/lessons/guide-shell/tutorial.html
+++ b/lessons/guide-shell/tutorial.html
@@ -1,7 +1,7 @@
 ---
 layout: lesson
 root: ../..
-title: Instructor's Guide for the Unix Shell
+title: The Unix Shell
 order: ["filedir", "create", "pipefilter", "loop", "scripts", "find"]
 ---
 <section>
