--- a/lessons/guide-web/tutorial.html
+++ b/lessons/guide-web/tutorial.html
@@ -1,7 +1,7 @@
 ---
 layout: lesson
 root: ../..
-title: Instructor's Guide for Web Programming with Python
+title: Web Programming with Python
 order: ["history", "formatting", "attributes", "morehtml", "templating", "http", "client", "server", "index", "syndicate"]
 ---
 
