--- a/lessons/index.html
+++ b/lessons/index.html
@@ -11,7 +11,102 @@ title: Lesson Material
 </p>
 
 <div>
-  <h2>Material from The Hacker Within at the University of Wisconsin - Madison</h2>
+  <h2>Software Carpentry</h2>
+
+  <p>
+    This material is original to Software Carpentry.
+  </p>
+
+  <dl>
+
+    <dt><a href="guide-shell/tutorial.html">The Unix Shell</a></dt>
+    <dd>
+      Core material for the Unix shell:
+      the organization of files and directories,
+      creating and deleting things,
+      the pipe and filter model,
+      processing multiple files using loops,
+      putting commonly-used commands in shell scripts,
+      and finding things.
+      <br/>
+      To do: diagrams.
+    </dd>
+
+    <dt><a href="guide-python/tutorial.html">Basic Programming Using Python</a></dt>
+    <dd>
+      An introduction to basic programming concepts using the IPython Notebook, skimage.novice, and ipythonblocks.
+      <br/>
+      To do: lots.
+    </dd>
+
+    <dt><a href="guide-setdict/tutorial.html">Sets and Dictionaries</a></dt>
+    <dd>
+      Optional material for Python programming:
+      sets and dictionaries,
+      how hash-based data structures work,
+      the JSON data format
+      (which relies heavily on dictionaries),
+      and three examples of increasing complexity.
+      <br/>
+      To do: diagrams.
+    </dd>
+
+    <dt><a href="guide-invperc/tutorial.html">Invasion Percolation</a></dt>
+    <dd>
+      Invasion percolation is a good half-day example
+      that brings together many of the things we teach about programming
+      while introducing new concepts like performance profiling and development lifecycles.
+      <br/>
+      To do: diagrams; challenges; IPython Notebooks.
+    </dd>
+
+    <dt><a href="guide-db/tutorial.html">Databases and SQL</a></dt>
+    <dd>
+      Core material for SQL databases:
+      selection,
+      removing duplicates,
+      filtering with Boolean conditions,
+      performing calculations on values,
+      sorting,
+      handling NULLs,
+      aggregating values,
+      grouping,
+      joining multiple tables,
+      a <em>very</em> brief introduction to creating tables and inserting data,
+      an equally brief coverage of transactions,
+      and a couple of examples showing how to uses databases from inside a program.
+      <br/>
+      To do: diagrams, and material on how to design and structure tables.
+    </dd>
+
+    <dt><a href="guide-web/tutorial.html">Web Programming with Python</a></dt>
+    <dd>
+      Preliminary material on web programming:
+      a little bit of history,
+      basic HTML,
+      using a templating engine to create pages,
+      how HTTP works,
+      fetching data programmatically,
+      providing data by dynamically generating static pages,
+      why and how to create an index,
+      and data syndication.
+      <br/>
+      To do: diagrams; switch from Jinja2 to Jekyll (since that's what GitHub uses); try out.
+    </dd>
+
+  </dl>
+
+</div>
+
+<div>
+  <h2>The Hacker Within</h2>
+
+  <p>
+    This material originated with a grassroots group
+    at the University of Wisconsin - Madison
+    called The Hacker Within.
+    We are grateful for their permission to re-use it.
+  </p>
 
   <dl>
 
@@ -81,88 +176,4 @@ title: Lesson Material
     </dd>
 
   </dl>
-</div>
-
-<div>
-  <h2>Instructor's Guide</h2>
-
-  <dl>
-
-    <dt><a href="guide-shell/tutorial.html">Instructor's Guide for the Unix Shell</a></dt>
-    <dd>
-      Core material for the Unix shell:
-      the organization of files and directories,
-      creating and deleting things,
-      the pipe and filter model,
-      processing multiple files using loops,
-      putting commonly-used commands in shell scripts,
-      and finding things.
-      <br/>
-      To do: diagrams.
-    </dd>
-
-    <dt><a href="guide-pyblocks/tutorial.html">Instructor's Guide for Basic Python Using IPythonBlocks</a></dt>
-    <dd>
-      An introduction to basic programming concepts using the IPython Notebook and IPythonBlocks.
-      <br/>
-      To do: lots.
-    </dd>
-
-    <dt><a href="guide-setdict/tutorial.html">Instructor's Guide for Sets and Dictionaries</a></dt>
-    <dd>
-      Optional material for Python programming:
-      sets and dictionaries,
-      how hash-based data structures work,
-      the JSON data format
-      (which relies heavily on dictionaries),
-      and three examples of increasing complexity.
-      <br/>
-      To do: diagrams.
-    </dd>
-
-    <dt><a href="guide-invperc/tutorial.html">Instructor's Guide for Invasion Percolation Example</a></dt>
-    <dd>
-      Invasion percolation is a good half-day example
-      that brings together many of the things we teach about programming
-      while introducing new concepts like performance profiling and development lifecycles.
-      <br/>
-      To do: diagrams; challenges; IPython Notebooks.
-    </dd>
-
-    <dt><a href="guide-db/tutorial.html">Instructor's Guide for Databases and SQL</a></dt>
-    <dd>
-      Core material for SQL databases:
-      selection,
-      removing duplicates,
-      filtering with Boolean conditions,
-      performing calculations on values,
-      sorting,
-      handling NULLs,
-      aggregating values,
-      grouping,
-      joining multiple tables,
-      a <em>very</em> brief introduction to creating tables and inserting data,
-      an equally brief coverage of transactions,
-      and a couple of examples showing how to uses databases from inside a program.
-      <br/>
-      To do: diagrams, and material on how to design and structure tables.
-    </dd>
-
-    <dt><a href="guide-web/tutorial.html">Instructor's Guide for Web Programming with Python</a></dt>
-    <dd>
-      Preliminary material on web programming:
-      a little bit of history,
-      basic HTML,
-      using a templating engine to create pages,
-      how HTTP works,
-      fetching data programmatically,
-      providing data by dynamically generating static pages,
-      why and how to create an index,
-      and data syndication.
-      <br/>
-      To do: diagrams; switch from Jinja2 to Jekyll (since that's what GitHub uses); try out.
-    </dd>
-
-  </dl>
-
 </div>
