Adding link to Python testing material

--- a/lessons/index.html
+++ b/lessons/index.html
@@ -150,6 +150,13 @@ title: Lesson Material
       It includes a <a href="thw-python-debugging/tutorial.html">single tutorial</a>.
     </dd>
 
+    <dt>Testing with Python</dt>
+    <dd>
+      This introduction is based on materials
+      originally written by Katy Huff, Rachel Slaybaugh, and Anthony Scopatz.
+      It includes a <a href="thw-testing/tutorial.html">single tutorial</a>.
+    </dd>
+
     <dt>NumPy</dt>
     <dd>
       An introduction to array-based computing in Python from Matthew Terry.
