Renaming R material to be consistent with newly-added Pandas material

--- a/lessons/index.html
+++ b/lessons/index.html
@@ -183,4 +183,32 @@ title: Lesson Material
     </dd>
 
   </dl>
+
+<div>
+  <h2>Miscellaneous</h2>
+
+  <p>
+    This material was written and contributed by a variety of people.
+    We are grateful for their permission to reuse it.
+  </p>
+
+  <dl>
+
+    <dt>Introduction to R</dt>
+    <dd>
+      An introduction to R originally developed by Prof. Jenny Bryan
+      at the University of British Columbia,
+      and modified by others for use in Software Carpentry bootcamps.
+      See the <a href="misc-r/tutorial.html">main tutorial file</a>
+      for the starting point.
+    </dd>
+
+    <dt>Introduction to Pandas</dt>
+    <dd>
+      An introduction to the Pandas statistical library
+      written by Indiana University's Michael Hansen,
+      contained in a <a href="misc-pandas">single tutorial</a>.
+    </dd>
+
+  </dl>
 </div>
