--- a/lessons/index.html
+++ b/lessons/index.html
@@ -19,7 +19,7 @@ title: Lesson Material
 
   <dl>
 
-    <dt><a href="guide-shell/tutorial.html">The Unix Shell</a></dt>
+    <dt><a href="swc-shell/tutorial.html">The Unix Shell</a></dt>
     <dd>
       Core material for the Unix shell:
       the organization of files and directories,
@@ -32,14 +32,14 @@ title: Lesson Material
       To do: diagrams.
     </dd>
 
-    <dt><a href="guide-python/tutorial.html">Basic Programming Using Python</a></dt>
+    <dt><a href="swc-python/tutorial.html">Basic Programming Using Python</a></dt>
     <dd>
       An introduction to basic programming concepts using the IPython Notebook, skimage.novice, and ipythonblocks.
       <br/>
       To do: lots.
     </dd>
 
-    <dt><a href="guide-setdict/tutorial.html">Sets and Dictionaries</a></dt>
+    <dt><a href="swc-setdict/tutorial.html">Sets and Dictionaries</a></dt>
     <dd>
       Optional material for Python programming:
       sets and dictionaries,
@@ -51,7 +51,7 @@ title: Lesson Material
       To do: diagrams.
     </dd>
 
-    <dt><a href="guide-invperc/tutorial.html">Invasion Percolation</a></dt>
+    <dt><a href="swc-invperc/tutorial.html">Invasion Percolation</a></dt>
     <dd>
       Invasion percolation is a good half-day example
       that brings together many of the things we teach about programming
@@ -60,7 +60,7 @@ title: Lesson Material
       To do: diagrams; challenges; IPython Notebooks.
     </dd>
 
-    <dt><a href="guide-db/tutorial.html">Databases and SQL</a></dt>
+    <dt><a href="swc-db/tutorial.html">Databases and SQL</a></dt>
     <dd>
       Core material for SQL databases:
       selection,
@@ -79,7 +79,7 @@ title: Lesson Material
       To do: diagrams, and material on how to design and structure tables.
     </dd>
 
-    <dt><a href="guide-web/tutorial.html">Web Programming with Python</a></dt>
+    <dt><a href="swc-web/tutorial.html">Web Programming with Python</a></dt>
     <dd>
       Preliminary material on web programming:
       a little bit of history,
