Importing Biopython lesson materials

--- a/lessons/index.html
+++ b/lessons/index.html
@@ -207,7 +207,21 @@ title: Lesson Material
     <dd>
       An introduction to the Pandas statistical library
       written by Indiana University's Michael Hansen,
-      contained in a <a href="misc-pandas">single tutorial</a>.
+      contained in a <a href="misc-pandas/tutorial.html">single tutorial</a>.
+    </dd>
+
+    <dt>Introduction to Biopython</dt>
+    <dd>
+      An introduction to bioinformatics computing using biopython
+      originally written by Will Trimble, Aron Ahmadia, and others.
+      It covers:
+      <ul>
+	<li>The <a href="misc-biopython/tutorial.html">main tutorial</a></li>
+	<li>The <a href="misc-biopython/reproducible_workflow.html">creating a reproducible workflow</a></li>
+	<li><a href="misc-biopython/eutils.html">NCBI's EUTILS</a></li>
+	<li><a href="misc-biopython/similarity.html">similarity searching</a></li>
+	<li><a href="misc-biopython/fastq.html">FASTQ sequence parsing</a></li>
+      </ul>
     </dd>
 
   </dl>
