Importing a short lesson on installing 'grin' by Cindee Madison

--- a/lessons/index.html
+++ b/lessons/index.html
@@ -224,5 +224,14 @@ title: Lesson Material
       </ul>
     </dd>
 
+    <dt>Installing a Python Package Locally</dt>
+    <dd>
+      A short introduction to installing <code>grin</code> with <code>pip</code>
+      and updating <code>PATH</code> to find it
+      that was originally created by Cindee Madison.
+      (And yes,
+      those terms are all explained in <a href="misc-installation/tutorial.html">the tutorial</a>.)
+    </dd>
+
   </dl>
 </div>
