Adding link to Git tutorial

--- a/lessons/index.html
+++ b/lessons/index.html
@@ -32,6 +32,14 @@ title: Lesson Material
       To do: diagrams.
     </dd>
 
+    <dt><a href="swc-git/tutorial.html">Version Control with Git</a></dt>
+    <dd>
+      A short introduction to version control using Git and GitHub
+      that builds toward a branch-per-feature workflow.
+      <br/>
+      To do: lots of revision; diagrams.
+    </dd>
+
     <dt><a href="swc-python/tutorial.html">Basic Programming Using Python</a></dt>
     <dd>
       An introduction to basic programming concepts using the IPython Notebook, skimage.novice, and ipythonblocks.
