Importing John Blischak's work

--- a/lessons/index.html
+++ b/lessons/index.html
@@ -147,6 +147,7 @@ title: Lesson Material
 	<li><a href="thw-python/flow-control/tutorial.html">Flow Control</a></li>
 	<li><a href="thw-python/data-structures/tutorial.html">Data Structures</a></li>
 	<li><a href="thw-python/strings-io/tutorial.html">Strings and File I/O</a></li>
+	<li><a href="thw-python/functions-modules/tutorial.html">Functions and Modules</a></li>
       </ul>
       Most sections also include some exercise material.
     </dd>
