--- a/lessons/swc-python/tutorial.html
+++ b/lessons/swc-python/tutorial.html
@@ -15,5 +15,6 @@ title: Basic Programming Using Python
   <li><a href="python-2-loops-indexing.ipynb">Repeating Things</a></li>
   <li><a href="python-3-conditionals-defensive.ipynb">Making Decisions and Programming Defensively</a></li>
   <li><a href="python-4-files-lists.ipynb">Files and Lists</a></li>
-  <li><a href="python-5-testing.ipynb">Testing</a></li>
+  <li><a href="python-5-errors.ipynb">Handling Errors</a></li>
+  <li><a href="python-6-testing.ipynb">Testing</a></li>
 </ol>
