Updating index page

--- a/lessons/swc-python/tutorial.html
+++ b/lessons/swc-python/tutorial.html
@@ -10,11 +10,12 @@ title: Basic Programming Using Python
   and contributions are welcome.
 </p>
 <ol>
-  <li><a href="python-0-resize-image.ipynb">Resizing an Image</a></li>
-  <li><a href="python-1-functions.ipynb">Creating Functions</a></li>
-  <li><a href="python-2-loops-indexing.ipynb">Repeating Things</a></li>
-  <li><a href="python-3-conditionals-defensive.ipynb">Making Decisions and Programming Defensively</a></li>
-  <li><a href="python-4-files-lists.ipynb">Files and Lists</a></li>
-  <li><a href="python-5-errors.ipynb">Handling Errors</a></li>
-  <li><a href="python-6-testing.ipynb">Testing</a></li>
+  <li><a href="python-00-resize-image.ipynb">Resizing an Image</a></li>
+  <li><a href="python-01-functions.ipynb">Creating Functions</a></li>
+  <li><a href="python-02-loops-indexing.ipynb">Repeating Things</a></li>
+  <li><a href="python-03-conditionals-defensive.ipynb">Making Decisions and Programming Defensively</a></li>
+  <li><a href="python-04-files-lists.ipynb">Files and Lists</a></li>
+  <li><a href="python-05-errors.ipynb">Handling Errors</a></li>
+  <li><a href="python-06-testing.ipynb">Testing</a></li>
+  <li><a href="python-07-refactoring-dla.ipynb">Growing a Program</a></li>
 </ol>
