--- a/lessons/swc-python/tutorial.html
+++ b/lessons/swc-python/tutorial.html
@@ -17,5 +17,5 @@ title: Basic Programming Using Python
   <li><a href="python-04-files-lists.ipynb">Files and Lists</a></li>
   <li><a href="python-05-errors.ipynb">Handling Errors</a></li>
   <li><a href="python-06-testing.ipynb">Testing</a></li>
-  <li><a href="python-07-refactoring-dla.ipynb">Growing a Program</a></li>
+  <li><a href="python-07-dla.ipynb">Growing a Program</a></li>
 </ol>
