Building a command-line utility

--- a/lessons/swc-python/tutorial.html
+++ b/lessons/swc-python/tutorial.html
@@ -18,4 +18,5 @@ title: Basic Programming Using Python
   <li><a href="python-05-errors.ipynb">Handling Errors</a></li>
   <li><a href="python-06-testing.ipynb">Testing</a></li>
   <li><a href="python-07-dla.ipynb">Growing a Program</a></li>
+  <li><a href="python-08-numpy.ipynb">Number Crunching</a></li>
 </ol>
