--- a/lessons/swc-python/tutorial.html
+++ b/lessons/swc-python/tutorial.html
@@ -19,4 +19,5 @@ title: Basic Programming Using Python
   <li><a href="python-06-testing.ipynb">Testing</a></li>
   <li><a href="python-07-dla.ipynb">Growing a Program</a></li>
   <li><a href="python-08-numpy.ipynb">Number Crunching</a></li>
+  <li><a href="python-09-cmdline.ipynb">Back to the Command Line</a></li>
 </ol>
