Set up new Wildcards section.  Text copied from Pipes and Filters for now.

--- a/lessons/swc-shell/tutorial.html
+++ b/lessons/swc-shell/tutorial.html
@@ -48,6 +48,16 @@ order: ["intro", "filedir", "create", "pipefilter", "loop", "scripts", "find"]
   {% include guide-shell/create/challenges.html %}
 </section>
 
+<section id="s:shell:wildcard">
+  <h2>{% include guide-shell/wildcard/title.md %}</h2>
+  <h3>Objectives</h3>
+  {% include guide-shell/wildcard/objectives.html %}
+  <h3>Lesson</h3>
+  {% include guide-shell/wildcard/lesson.html %}
+  <h3>Summary</h3>
+  {% include guide-shell/wildcard/keypoints.html %}
+</section>
+
 <section id="s:shell:pipefilter">
   <h2>{% include guide-shell/pipefilter/title.md %}</h2>
   <h3>Objectives</h3>
