Added text on ! wildcard and combining and nesting wildcards. Started writing about escaping wildcard characters. Moved explanation of escaping special characters into a box. Code creating the file file[AB].txt. More on ls file[AB].txt. What happens if we create fileA.txt. Example of escaping wildcard characters. Changed starter text for Escaping Special Characters box. Moved wildcard stuff in Pipelines section to Wildcard section.   Needs to be merged into that text. Moved all material on wildcards from Pipes and Filters into Wildcards section, including from objectives and summary, but kept that text in italics so we can merge it into surrounding text.
Small modification to text at beginning of Pipes and Filters.
Change of wording to text at beginning of Pipes and Filters.
Starting revising text at the beginning of Wildcards section.
Continued writing about file* example.
Moved stuff about asterisk into a box.
Finished text box on asterisk wildcard.
Put four types of wildcards into a bulleted list.
Edited bullet point about square brackets.
Edited bullet point about exclamation mark.
Edited bullet point about curly braces.
Eliminated box on question mark wildcard and moved most of the text after the bullet points.
Changed some text for consistency with the bullet points.
Merged italicized objectives into the rest of the list.
Merged italicized summary points into the rest of the list.
Slight change of words in objectives.
Made files for challenges for the wildcard section.
Added a challenge question.
Added another challenge question for the wildcard section.
Had to put challenges subsection for wildcard section into the tutorial.html.

Changed notes on what to write in Escaping Special Characters box.

--- a/lessons/swc-shell/tutorial.html
+++ b/lessons/swc-shell/tutorial.html
@@ -2,7 +2,7 @@
 layout: lesson
 root: ../..
 title: The Unix Shell
-order: ["intro", "filedir", "create", "pipefilter", "loop", "scripts", "find"]
+order: ["filedir", "create", "wildcard", "pipefilter", "loop", "scripts", "find"]
 ---
 <section>
   <h2>Opening</h2>
@@ -56,6 +56,8 @@ order: ["intro", "filedir", "create", "pipefilter", "loop", "scripts", "find"]
   {% include guide-shell/wildcard/lesson.html %}
   <h3>Summary</h3>
   {% include guide-shell/wildcard/keypoints.html %}
+  <h3>Challenges</h3>
+  {% include guide-shell/wildcard/challenges.html %}
 </section>
 
 <section id="s:shell:pipefilter">
