--- a/lessons/swc-shell/tutorial.html
+++ b/lessons/swc-shell/tutorial.html
@@ -14,6 +14,16 @@ order: ["filedir", "create", "pipefilter", "loop", "scripts", "find"]
   {% include guide-shell/instructors.html %}
 </section>
 
+<section id="s:shell:intro">
+  <h2>{% include guide-shell/intro/title.md %}</h2>
+  <h3>Objectives</h3>
+  {% include guide-shell/intro/objectives.html %}
+  <h3>Lesson</h3>
+  {% include guide-shell/intro/lesson.html %}
+  <h3>Summary</h3>
+  {% include guide-shell/intro/keypoints.html %}
+</section>
+
 <section id="s:shell:filedir">
   <h2>{% include guide-shell/filedir/title.md %}</h2>
   <h3>Objectives</h3>
