--- a/lessons/swc-shell/tutorial.html
+++ b/lessons/swc-shell/tutorial.html
@@ -2,7 +2,7 @@
 layout: lesson
 root: ../..
 title: The Unix Shell
-order: ["filedir", "create", "wildcard", "pipefilter", "loop", "scripts", "find"]
+order: ["intro", "filedir", "create", "wildcard", "pipefilter", "loop", "scripts", "find"]
 ---
 <section>
   <h2>Opening</h2>
