Fixed two broken links in lessons/index, one in a lesson

--- a/lessons/index.html
+++ b/lessons/index.html
@@ -169,13 +169,13 @@ title: Lesson Material
     <dt>NumPy</dt>
     <dd>
       An introduction to array-based computing in Python from Matthew Terry.
-      It consists of a <a href="thw-numpy.html">single tutorial</a>.
+      It consists of a <a href="thw-numpy/tutorial.html">single tutorial</a>.
     </dd>
 
     <dt>SciPy</dt>
     <dd>
       A supplement to the NumPy tutorial from Anthony Scopatz.
-      It also consists of a <a href="thw-scipy.html">single tutorial</a>.
+      It also consists of a <a href="thw-scipy/tutorial.html">single tutorial</a>.
     </dd>
 
     <dt>Plotting in Python with matplotlib</dt>
