Changed link from html to nbviewer

--- a/lessons/index.html
+++ b/lessons/index.html
@@ -216,7 +216,7 @@ title: Lesson Material
     <dd>
       An introduction to the Pandas statistical library
       written by Indiana University's Michael Hansen,
-      contained in a <a href="misc-pandas/tutorial.html">single tutorial</a>.
+      contained in a <a href="https://raw.github.com/swcarpentry/bc/gh-pages/lessons/misc-pandas/an-introduction-to-pandas.ipynb">ipython notebook (HTML rendering)</a>.
     </dd>
 
     <dt>Introduction to Biopython</dt>
